--- a/index.html
+++ b/index.html
@@ -2,12 +2,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-        
-    </script>
+    <title>Belajar Jees</title>
 </head>
 <body>
-    
+    <script>
+        alert("HAELOWW WORLDD");
+        document.write(
+            "<H1>GUE BLAJAR JEES</H1>"
+        );
+
+    /*1.Variabel
+    Variabel digunakan untuk menyimpan data. 
+    Anda dapat mendeklarasikan variabel dengan menggunakan kata kunci var, let, atau const. Contoh:*/
+    var nama = "John";
+    let umur = 30;
+    const PI = 3.14;
+
+    /*2.Operator Aritmatika
+    JavaScript memiliki operator matematika seperti + (penjumlahan), - (pengurangan), * (perkalian), / (pembagian), dan % (modulo). Contoh:*/
+    let angka1 = 10;
+    let angka2 = 5;
+    let hasilTambah = angka1 + angka2; // Hasilnya adalah 15
+    let hasilKali = angka1 * angka2; // Hasilnya adalah 50
+
+    /*3.console.log()
+    console.log() digunakan untuk mencetak hasil, pesan, atau nilai variabel ke konsol browser. Ini berguna untuk debugging dan memahami alur program. Contoh:*/
+    let nama = "Alice";
+    console.log("Halo, " + nama); // Output: "Halo, Alice"
+
+    /*Contoh Program Sederhana*/
+    let nilai1 = 10;
+    let nilai2 = 5;
+    let hasilTambah = nilai1 + nilai2;
+    let hasilKali = nilai1 * nilai2;
+
+    console.log("Hasil penjumlahan: " + hasilTambah);
+    console.log("Hasil perkalian: " + hasilKali);
+
+    /*Program ini akan menghasilkan output:
+        Hasil penjumlahan: 15
+        Hasil perkalian: 50
+        */
+
+    </script>
 </body>
 </html>
